test/files/neg/view-bounds-removal.check
view-bounds-removal.scala:4: error: view bounds are unsupported; use an implicit parameter instead.
  example: instead of `def f[A <% Int](a: A)` use `def f[A](a: A)(implicit ev: A => Int)`
  def f[A <% Int](a: A) = null
          ^
view-bounds-removal.scala:5: error: view bounds are unsupported; use an implicit parameter instead.
  example: instead of `def f[A <% Int](a: A)` use `def f[A](a: A)(implicit ev: A => Int)`
  def g[C, B <: C, A <% B : Numeric](a: A) = null
                     ^
2 errors
